--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   http: ^1.1.0
-  intl: ^0.18.1
+  intl: 0.18.0
   provider: ^6.0.5
   table_calendar: ^3.0.9
   flutter_form_builder: ^9.1.1
