--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,18 +3,19 @@ description: A Calendar Booking App with Flutter frontend and Node.js backend
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.0 <4.0.0"
+  sdk: ">=2.19.0 <3.1.0"
+  flutter: ">=3.0.0 <3.1.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
   http: ^1.1.0
-  intl: ^0.17.0
+  intl: 0.17.0
   provider: ^6.0.5
   table_calendar: ^3.0.9
-  flutter_form_builder: ^8.0.0
-  form_builder_validators: ^8.6.1
+  flutter_form_builder: 7.8.0
+  form_builder_validators: 8.4.0
   mongo_dart: ^0.9.3
   shared_preferences: ^2.2.2
   dropdown_button2: ^2.3.9
