--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,27 +3,27 @@ description: A Calendar Booking App with Flutter frontend and Node.js backend
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.0 <3.1.0"
-  flutter: ">=3.0.0 <3.1.0"
+  sdk: ">=2.16.0 <3.0.0"
+  flutter: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
-  http: ^1.1.0
-  intl: 0.17.0
-  provider: ^6.0.5
-  table_calendar: ^3.0.9
-  flutter_form_builder: 7.8.0
-  form_builder_validators: 8.4.0
-  mongo_dart: ^0.9.3
-  shared_preferences: ^2.2.2
-  dropdown_button2: ^2.3.9
+  cupertino_icons: ^1.0.2
+  http: ^0.13.4
+  intl: ^0.17.0
+  provider: ^6.0.2
+  table_calendar: ^3.0.5
+  flutter_form_builder: ^7.0.0
+  form_builder_validators: ^7.9.0
+  mongo_dart: ^0.7.4
+  shared_preferences: ^2.0.13
+  dropdown_button2: ^1.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.3
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
