--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,3 +28,8 @@ linter:
 analyzer:
   errors:
     invalid_annotation_target: ignore
+  language:
+    strict-casts: true
+    strict-raw-types: true
+  enable-experiment:
+    - super-parameters
